# AI_trainee

./: .gitignore  README.md  main.bicep  pyproject.toml  requirements.txt  setup.py
azure_func/: .funcignore  function_app.py  requirements.txt
azure_func/static/: index.html
azure_func/tests/: test_function_app.py
backlog/: sprint1.md
frontend/: README.md  app.py
logs/: usage.md
notebooks/: queries.ipynb
prompts/: best.txt
src/: __init__.py
src/RAG/: ai_search.py  ai_search_langchain.py
src/awesome_package/: module.py
src/azure_func/: function_app.py  requirements.txt
src/openai/: test.py  user_stories.py
src/quiz_bot/: quiz_bot.py
